--- a/website_delivery_ups/views/delivery_ups_view.xml
+++ b/website_delivery_ups/views/delivery_ups_view.xml
@@ -45,4 +45,10 @@
             </xpath>
         </field>
     </record>
+
+    <template id="assets_frontend_ups" inherit_id="website.assets_frontend" name="ups">
+        <xpath expr="." position="inside">
+            <script src="/website_delivery_ups/static/src/js/ups.js"></script>
+        </xpath>
+    </template>
 </odoo>
